<resources>
    <string name="app_name">IncomeCalculator</string>
    <string name="change_wage_details">Change Wage Details</string>
    <string name="add_shift">Add Shift</string>
    <string name="view_shifts">View Shifts</string>
    <string name="calculate_income">Calculate Income</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="value_of_one_unit_in_subunits">Value of One Unit In Subunit</string>
    <string name="has_subunit">Has Subunit</string>
    <string name="update_wage_details">Update Wage Details</string>
    <string name="start_date_yyyy_mm_dd">Start Date (YYYY/MM/DD)</string>
    <string name="end_date_yyyy_mm_dd">End Date (YYYY/MM/DD)</string>
    <string name="start_time_hh_mm">Start Time (HH:MM)</string>
    <string name="end_time_hh_mm">End Time (HH:MM)</string>
    <string name="break_in_minutes">Break in Minutes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="calculate_expected_income">Calculate Expected Income</string>
</resources>