<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/change_wage_details_button"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:text="@string/change_wage_details" />

            <Button
                android:id="@+id/add_shift_button"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:text="@string/add_shift" />

            <Button
                android:id="@+id/view_shifts_button"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:text="@string/view_shifts" />

            <Button
                android:id="@+id/calculate_income_button"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:text="@string/calculate_income" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>