<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeWageDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currency_symbol_input"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/currency_symbol"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/has_subunit_checkbox"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:text="@string/has_subunit" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/value_in_subunit_input"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/value_of_one_unit_in_subunits"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hourly_wage_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:hint="Hourly Rate of Pay"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/update_wage_details" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>